--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "canteen-app",
+  "name": "todo-list-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple TODO List application to manage tasks efficiently.",
   "main": "script.js",
   "scripts": {
+"start": "node script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": ["todo", "task", "management"],
+  "author": "Vipin",
+  "license": "MIT"
 }
